# sentinel

./: .env  .gitignore  LICENSE  README.md  deployment.md  docker-compose.yml  gallery.md  package-lock.json
.github/: FUNDING.yml
.github/DISCUSSION_TEMPLATE/: questions.yml
.github/ISSUE_TEMPLATE/: config.yml  privileged.md  privileged.yml
.github/workflows/: mongo-setup.yml  mongo_setup.yml  python-app.yml  tests.yml
backend/: .dockerignore  .env  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: app.py
backend/src/api/controllers/: auth.py  device.py  user.py
backend/src/api/controllers/statistics/: device.py
backend/src/api/models/: device.py  user.py
backend/src/api/routers/: auth.py  device.py  user.py
backend/src/api/routers/statistics/: __init__.py  device.py
backend/src/app/: main.py  run.py
backend/src/config/: app.py  db.py  environment.py  manager.py  metadata.py
backend/src/controllers/: auth.py  device.py  devices.py  test.py  user.py
backend/src/controllers/statistics/: device.py  devices.py
backend/src/core/: db.py
backend/src/core/config/: app.py  db.py  metadata.py  provider.py
backend/src/core/security/: password.py  token.py
backend/src/dal/: base_repo.py  db.py  devices.py  schema.py  transaction_manager.py  users.py
backend/src/dal/entities/: device.py  user.py
backend/src/dal/entities/devices/: __init__.py  linux.py  windows.py
backend/src/dal/repositories/: device.py  user.py
backend/src/dal/tables/: devices.py  users.py
backend/src/middleware/: db.py  db_connection.py  token.py
backend/src/models/: device.py  device_factory.py  user.py
backend/src/models/devices/: __init__.py  device.py  device_factory.py  linux_device.py  windows.py  windows_device.py
backend/src/routers/: __init__.py  auth.py  device.py  devices.py  statistics.py  user.py  users.py
backend/src/routers/statistics/: __init__.py  device.py  devices.py
backend/src/services/: devices.py  users.py
backend/src/utils/: config.py  datetime_utils.py  mongodb_create_user.py  reset_database.py  test.py
backend/tests/integration/: c7c71603828592ec641e903390248c10_devices.table  mock.db  test_devices_integration.py
backend/tests/unit/: .env  devices_service_test.py  ed40eabdcf4f3508ab5a6a30fa4530d8_devices.table  test_users.py  test_windows_device.py
backend/tests/unit/windows_device/: fixtures.py  test_windows_device.py
controllers/: test.py
dal/: device.py  devices.py  users.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  fonts.css  main.tsx
frontend/src/components/: DevicesTable.tsx
frontend/src/components/ContentContainer/: ContentContainer.tsx  style.ts  types.ts
frontend/src/components/DeviceCard/: DeviceCard.tsx  style.css  types.ts
frontend/src/components/DeviceCoverageGraph/: DeviceCoverageGraph.tsx  style.ts
frontend/src/components/DeviceDesciptionCard/: DeviceDesciptionCard.tsx  style.ts
frontend/src/components/DeviceOSCard/: DeviceOSCard.tsx  style.ts
frontend/src/components/DeviceOSPieChart/: DeviceOSPieChart.tsx  style.ts
frontend/src/components/InfoModal/: style.ts  (+2 more)
frontend/src/views/: NotFound.tsx
models/: device.py
models/devices/: windows.py
scripts/: mongo-setup.sh
services/: devices.py  users.py
utils/: config.py
(+70 files in other folders)
