[project]
name = "backend"
version = "0.1.0"
description = ""
requires-python = ">=3.10,<4.0"
dependencies = [
    "uvicorn<1.0.0,>=0.30.1",
    "fastapi[standard]<1.0.0,>=0.111.0",
    "python-multipart<1.0.0,>=0.0.7",
    "pydantic-settings<3.0.0,>=2.2.0",
    "pydantic<3.0.0,>=2.0",
    "pyjwt<3.0.0,>=2.8.0",
    "passlib[bcrypt]<2.0.0,>=1.7.4",
    "bcrypt==4.0.1",
    # Pin bcrypt until passlib supports the latest
    "beanie<2.0.0,>=1.26.0",
]

[tool.uv]
dev-dependencies = [
    "pytest<9.0.0,>=7.4.3",
    "ruff<1.0.0,>=0.6.9",
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
